--- a/res/layout/activity_winner.xml
+++ b/res/layout/activity_winner.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="@string/hello_world" />
+        android:text="@string/hello_world"
+        android:textSize="@android:dimen/notification_large_icon_height" />
 
     <Button
         android:id="@+id/button1"
